# didactic-barnacle

./: .editorconfig  .gitignore  DATABASE_MIGRATION.md  E2E_TEST_REPORT.md  MIGRATION_PROCESS.md  Makefile  README.md  SPEC.md  claude_output_21_20250813_223059.txt  claude_output_21_20250813_223704.txt  claude_output_21_20250813_224309.txt  claude_output_22_20250813_221611.txt  claude_output_24_20250813_220450.txt  claude_output_27_20250813_214557.txt  claude_output_32_20250814_171429.txt  claude_output_33_20250814_173407.txt  claude_output_33_20250814_174942.txt  claude_output_33_20250814_183702.txt  package.json  pyproject.toml  specs.md  test.txt
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  init.sql  package-lock.json  package.json
backend/coverage/: clover.xml  coverage-final.json  lcov.info
backend/migrations/: 001_create_users_table.sql
backend/scripts/: migrate.ts
backend/src/: app.ts  index.ts  server.js
config/: app.example.yaml  database.js  database.py  database.yml
db/: postgresql_schema.sql
db/migration_scripts/: migrate.sh  mysql_to_postgresql.py
didactic-barnicle-ios/didactic-barnicle-ios/: ContentView.swift  Info.plist  didactic_barnicle_iosApp.swift
didactic-barnicle-ios/didactic-barnicle-ios.xcodeproj/: project.pbxproj
docs/: ARCHITECTURE.md  README.md  REPO_VALIDATION.md  index.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx
ios/: Package.swift  README.md
public/: index.html
scripts/: dev.sh  setup.sh  validate_repo_access.py  validate_repo_access.sh
src/: App.js  __init__.py  index.css  index.js  repo_access.py
src/components/: Navbar.js
tests/: README.md  __init__.py  placeholder.test.md  test_repo_clone.py  test_repo_scaffold.py  test_repo_verify.py  utils.py
tools/: validate_repo_access.py
(+169 files in other folders)
