[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "didactic-barnacle"
version = "0.0.0"
description = "Monorepo scaffold for mobile companion app and tools"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Repo Maintainers" }]
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.black]
line-length = 100
# Avoid unreleased/bleeding versions here to keep tooling stable.
# If testing future compatibility, re-add newer targets explicitly.
target-version = ["py310", "py311", "py312"]
exclude = [
  "^/ios/",
]

[tool.isort]
profile = "black"
line_length = 100
