[project]
name = "didactic-barnacle"
version = "0.0.1"
description = "Scaffold and utilities for repo access validation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [".venv", "venv", "build", "dist"]

